# Cortex-Command-Community-Project-Source

./: .clang-format  .dir-locals.el  .gitignore  .releaserc.json  CHANGELOG.md  Main.cpp  README.md  RTEA.vcxproj  RTEA.vcxproj.filters  RefactorDebug.cpp  RefactorDebug.h  TODOs.org  meson.build  test.cpp
Menus/: AreaEditorGUI.cpp  AreaEditorGUI.h  AreaPickerGUI.cpp  AreaPickerGUI.h  AssemblyEditorGUI.cpp  AssemblyEditorGUI.h  BuyMenuGUI.cpp  BuyMenuGUI.h  EventHandler.h  EventHandlerScenario.cpp  EventHandlerScenario.h  EventHandlerSettings.cpp  EventHandlerSettings.h  GibEditorGUI.cpp  GibEditorGUI.h  InventoryMenuGUI.cpp  InventoryMenuGUI.h  LoadingGUI.cpp  LoadingGUI.h  LoadingScreen.cpp  LoadingScreen.h  MainMenuGUI.cpp  MainMenuGUI.h  MetagameGUI.cpp  MetagameGUI.h  ModManagerGUI.cpp  ModManagerGUI.h  MultiplayerGameGUI.h  ObjectPickerGUI.cpp  ObjectPickerGUI.h  PieMenuGUI.cpp  PieMenuGUI.h  PieMenuGUI.rar  ScenarioActivityConfigGUI.cpp  ScenarioActivityConfigGUI.h  ScenarioGUI.cpp  ScenarioGUI.h  SceneEditorGUI.cpp  SceneEditorGUI.h  SettingsGUI.cpp  (+16 more)
System/: Atom.cpp  Atom.h  BlendMode.cpp  Box.cpp  Box.h  Color.cpp  Color.h  Constants.h  ContentFile.cpp  ContentFile.h  Controller.cpp  Controller.h  DataModule.cpp  DataModule.h  Entity.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.cpp  GLTexture.h  GraphicalPrimitive.cpp  GraphicalPrimitive.h  InputMapping.h  InputScheme.cpp  InputScheme.cpp.bak  Matrix.h  PieSlice.cpp  PieSlice.h  RTEError.cpp  RTEError.h  RTESurface.cpp  RTESurface.h  RTETools.cpp  RTETools.h  Reader.cpp  SDLHelper.cpp  SDLHelper.h  SDLTexture.h  (+10 more)
(+252 files in other folders)
