sources += files(
'AreaEditorGUI.cpp',
'AreaPickerGUI.cpp',
'AssemblyEditorGUI.cpp',
'BuyMenuGUI.cpp',
'GibEditorGUI.cpp', #TODO: add zoom
'LoadingGUI.cpp',
'MainMenuGUI.cpp',
'MetagameGUI.cpp',
# 'MultiplayerGameGUI.cpp', # TODO: Multiplayer
'ObjectPickerGUI.cpp',
'PieMenuGUI.cpp',
'ScenarioGUI.cpp',
'SceneEditorGUI.cpp'
)
