sources += files(
'MicroPather/micropather.cpp',
'Atom.cpp',
'Box.cpp',
'Color.cpp',
'ContentFile.cpp',
'Controller.cpp',
'DataModule.cpp',
'Entity.cpp',
'GraphicalPrimitive.cpp',
'InputMapping.cpp',
'InputScheme.cpp',
'Matrix.cpp',
'PathFinder.cpp',
'RTEError.cpp',
'RTETools.cpp',
'RTESurface.cpp',
'Reader.cpp',
'SDLHelper.cpp',
'SDLTexture.cpp',
# 'StandardIncludes.cpp',
'System.cpp',
'InputMapping.cpp',
'PathFinder.cpp',
'PieSlice.cpp',
'DataModule.cpp',
'Timer.cpp',
'Vector.cpp',
'Writer.cpp',
'Serializable.cpp',
)
